# geometric-aware-retrieval-v2

./: .gitattributes  .gitignore  AGENTS.md  ARCH.md  CITATION.cff  FEEDBACK.md  IDEA.md  LICENSE  Makefile  README.md  dry_run_config.yaml  pyproject.toml  requirements.txt  run_exps.py
.github/workflows/: ci.yml  python.yml
examples/: basic_usage.py  differentiable_demo.py  dummy_docs.txt  fixed_demo.py  quick_cfg.yaml  quick_experiment_cli.py  quickstart.py
geoIR/: __init__.py  cli.py  losses.py  utils.py
geoIR/core/: __init__.py  config.py  registry.py  runner.py
geoIR/data/: fallback.py  loader.py  loaders.py
geoIR/eval/: __init__.py  advanced.py  judges.py  metrics.py  rare.py  sud.py
geoIR/geo/: __init__.py  curvature.py  differentiable.py  graph.py  graph_rerank.py  graphs.py  metrics.py
geoIR/retrieval/: __init__.py  encoder.py  index.py  retriever.py
geoIR/training/: __init__.py  trainer.py
paper/: FEEDBACK.md  main.tex  preambulo.tex
paper/apendices/: apendice_a.tex
paper/bibliografia/: referencias.bib
paper/secciones/: conclusion.tex  experimentos.tex  introduccion.tex  metodologia.tex  resultados.tex  resumen.tex  sota.tex  trabajo_relacionado.tex
research/: beir_euclidean_vs_geo.py
research/results/beir_euclidean_vs_geo/: FEEDBACK_DSK.md  README.md
research/results/beir_euclidean_vs_geo/2025-07-20_23-40-44/: beir_results.json  config.json
research/results/beir_euclidean_vs_geo/2025-07-20_23-40-53/: beir_results.json  config.json
research/results/beir_euclidean_vs_geo/2025-07-20_23-41-02/: beir_results.json  config.json
research/results/beir_euclidean_vs_geo/2025-07-20_23-41-10/: config.json  (+1 more)
tests/: test_geoloss_gradient_flow.py  test_retriever.py
(+4 files in other folders)
